fix overlaps and widths

--- a/react/src/pages/UserEditPage/UserEditPage.css
+++ b/react/src/pages/UserEditPage/UserEditPage.css
@@ -20,6 +20,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  padding-top: 50px;
 }
 
 .save-btn {
