--- a/react/src/pages/UsersPage/UsersPage.css
+++ b/react/src/pages/UsersPage/UsersPage.css
@@ -5,6 +5,7 @@
   gap: 10px;
   flex-direction: column;
   padding: 10px;
+  padding-top: 50px;
 }
 .user-container {
   display: flex;
